--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,9 @@ header{
 
 a{
     text-decoration: none;
+    cursor: pointer;
 }
+
 section{
     border:0.5px solid #e6e6e6;
 }
@@ -19,6 +21,9 @@ section{
     /* border:1px solid #e6e6e6; */
 }
 
+.wrapper{
+    position: relative;
+}
 .wrapper #header{
     position: relative;
 }
@@ -42,8 +47,31 @@ section{
     font-family: 'Raleway', sans-serif;
 }
 
+#header .floating_menu{
+    /* border:1px solid #e6e6e6; */
+    /* background:#fff; */
+    position:fixed;
+    top:90%;
+    left:93%;
+    z-index:100;
+}
+
+#header .floating_menu {
+    display:flex;
+    justify-content: center;
+    /* align-items: center; */
+    width:7%;
+    height:11%;
+}
+
+#header .floating_menu a{
+    color:#000;
+    font-size: 50px;
+}
+
+
 #header .container{
-    height:770px;
+    height:790px;
 }
 
 #header .container .header-top{
@@ -255,7 +283,7 @@ section#services .servicebox{
 }
 
 
-/* ------------------------------------------------------- */
+/* --------------------------portfolio section----------------------------- */
 
 section#portfolio .container{
     height:1100px;
@@ -309,4 +337,20 @@ section#portfolio .grid{
 .portfolio-item img{
     width:300px;
     height:270px;
+}
+/* ---------------------contact section-------------------- */
+
+section#contact{
+    background: #f7f7f7;
+}
+section#contact .content-title{
+    margin-bottom: 30px;
+}
+
+section#contact .content{
+    display:flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: center;
+    font-size: 20px;
 }
